z-index fix for notifications on safari

--- a/app/components/Notifications/Notifications.module.scss
+++ b/app/components/Notifications/Notifications.module.scss
@@ -2,7 +2,7 @@
 
 .notifications {
     grid-area: video;
-    z-index: 1;
+    z-index: 10;
     pointer-events: none;
     display: flex;
     flex-direction: column;
